# fbxcel

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md
examples/: dump-pull-parser-events.rs  load-dom.rs  load-domcast-tree.rs  load-tree.rs
fbxcel-dom/: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md
fbxcel-dom/examples/: load-dom.rs
fbxcel-dom/src/: any.rs  lib.rs
fbxcel-dom/src/any/: error.rs
fbxcel-dom/src/v7400/: connection.rs  definition.rs  document.rs  error.rs  object.rs
fbxcel-dom/src/v7400/connection/: cache.rs
fbxcel-dom/src/v7400/document/: loader.rs
fbxcel-dom/src/v7400/error/: connection.rs  load.rs  object.rs
fbxcel-dom/src/v7400/object/: cache.rs  deformer.rs  geometry.rs  macros.rs  material.rs  meta.rs  model.rs  nodeattribute.rs  scene.rs  texture.rs  typed.rs  video.rs
fbxcel-dom/src/v7400/object/deformer/: blendshape.rs  blendshapechannel.rs  cluster.rs  skin.rs
fbxcel-dom/src/v7400/object/geometry/: mesh.rs  shape.rs
fbxcel-dom/src/v7400/object/model/: camera.rs  light.rs  limbnode.rs  mesh.rs  null.rs
fbxcel-dom/src/v7400/object/nodeattribute/: camera.rs  light.rs  limbnode.rs  null.rs
fbxcel-dom/src/v7400/object/property/: loader.rs  loaders.rs  node.rs  object_props.rs  properties.rs
fbxcel-dom/src/v7400/object/property/loaders/: array.rs  binstr.rs  mint.rs  primitive.rs  strict_primitive.rs
fbxcel-dom/src/v7400/object/video/: clip.rs
src/: dom.rs  domcast.rs  lib.rs  low.rs  pull_parser.rs  tree.rs  writer.rs
src/dom/: any.rs  error.rs  mod.rs  v7400.rs
src/dom/any/: error.rs
src/dom/error/: access.rs  load.rs
src/dom/v7400/: connection.rs  core.rs  definition.rs  document.rs  error.rs  macros.rs  mod.rs  node.rs  object.rs  parsed.rs
src/dom/v7400/connection/: cache.rs
src/dom/v7400/core/: loader.rs
src/dom/v7400/document/: loader.rs  mod.rs
src/dom/v7400/error/: connection.rs  load.rs  object.rs
src/dom/v7400/object/: cache.rs  connection.rs  deformer.rs  geometry.rs  graph.rs  macros.rs  material.rs  meta.rs  model.rs  nodeattribute.rs  property.rs  scene.rs  texture.rs  typed.rs  video.rs
src/dom/v7400/object/deformer/: blendshape.rs  blendshapechannel.rs  cluster.rs  skin.rs
src/domcast/: v7400.rs
src/domcast/v7400/: connection.rs  document.rs  error.rs  object.rs
src/domcast/v7400/connection/: cache.rs
src/domcast/v7400/document/: loader.rs
src/domcast/v7400/error/: connection.rs  load.rs  object.rs
src/domcast/v7400/object/: cache.rs  meta.rs  scene.rs
src/low/: fbx_header.rs  mod.rs  v7400.rs  version.rs
src/low/v7400/: array_attribute.rs  attribute.rs  attribute_type.rs  fbx_footer.rs  mod.rs  node_header.rs  special_attribute.rs
src/low/v7400/attribute/: type_.rs  value.rs
src/pull_parser/: any.rs  error.rs  header.rs  mod.rs  position.rs  reader.rs  v7400.rs  version.rs
src/pull_parser/any/: error.rs
src/pull_parser/binary/: header.rs  mod.rs  version.rs
src/pull_parser/binary/error/: data.rs  mod.rs  operation.rs
src/pull_parser/binary/reader/: mod.rs  position_cache.rs
src/pull_parser/binary/v7400/: event.rs  mod.rs
src/pull_parser/error/: data.rs  mod.rs  operation.rs  warning.rs
src/pull_parser/reader/: mod.rs  position_cache.rs  source.rs
src/pull_parser/v7400/: attribute.rs  event.rs  mod.rs  parser.rs  read.rs
src/pull_parser/v7400/attribute/: array.rs  direct.rs  iter.rs  loader.rs  loaders.rs  mod.rs  visitor.rs
src/pull_parser/v7400/parser/: mod.rs  node.rs
src/tree/: any.rs  v7400.rs
src/tree/any/: error.rs
src/tree/v7400/: error.rs  loader.rs  macros.rs  node.rs
src/tree/v7400/node/: data.rs  handle.rs  name.rs
src/writer/: v7400.rs
src/writer/v7400/: binary.rs
src/writer/v7400/binary/: attributes.rs  error.rs  footer.rs  macros.rs
tests/: missing-and-extra-node-end-marker.rs  tree-macro-v7400.rs  write-and-parse-v7400-binary.rs  write-tree-and-parse-v7400-binary.rs  writer-binary-v7400.rs
tests/v7400/: writer.rs
(+35 files in other folders)
