[package]
name = "fbxcel"
version = "0.6.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Excellent FBX library"
repository = "https://github.com/lo48576/fbxcel"
keywords = ["FBX", "3D", "model"]
categories = ["parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

tree = ["indextree", "string-interner"]
writer = []

[dependencies]
byteorder = "1"
indextree = { version = "4", optional = true }
libflate = "1"
log = "0.4.4"
string-interner = { version = "0.12", optional = true, default-features = false, features = ["backends", "inline-more", "std"] }

[dev-dependencies]
env_logger = "0.8"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "lo48576/fbxcel" }

[[example]]
name = "dump-pull-parser-events"

[[example]]
name = "load-tree"
required-features = ["tree"]
