[package]
name = "fbxcel"
version = "0.7.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Excellent FBX library"
repository = "https://github.com/lo48576/fbxcel"
keywords = ["FBX", "3D", "model"]
categories = ["parser-implementations"]

[package.metadata.docs.rs]
all-features = true
# See <https://docs.rs/about/builds>.
#
# Didn't create `docsrs` feature, since this (`#[doc(cfg(feature = ...))]`)
# depends on nightly feature and it prevents `cargo doc --all-features` from
# running with stable rust toolchain.
# See <https://doc.rust-lang.org/rustdoc/unstable-features.html#extensions-to-the-doc-attribute>
# for unstable `#[doc(cfg(...))]` attribute.
rustc-args = ["--cfg", "docsrs"]

[features]
default = []

tree = ["indextree", "string-interner"]
writer = []

[dependencies]
byteorder = "1"
indextree = { version = "4", optional = true }
libflate = "1.0.1"
log = "0.4.4"
string-interner = { version = "0.14.0", optional = true, default-features = false, features = ["backends", "inline-more", "std"] }

[dev-dependencies]
env_logger = "0.9.0"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "lo48576/fbxcel" }

[[example]]
name = "dump-pull-parser-events"

[[example]]
name = "load-tree"
required-features = ["tree"]
